Dibuat menggunakan Colaboratory

--- a/Tugas_6_TKC_047_059.ipynb
+++ b/Tugas_6_TKC_047_059.ipynb
@@ -29,9 +29,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Faiq Azmi Nurfaizi           (201810370311047)\n",
+        "# Muhammad Reza Fahlopy Dharma (201810370311059)"
+      ],
+      "metadata": {
+        "id": "w0e4hp57e9av"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "from google.colab import files #import lib\n",
+        "from google.colab import files \n",
         "from pathlib import Path\n",
         "import os\n",
         "import pandas as pd\n",
@@ -51,8 +61,6 @@
         "files.upload()"
       ],
       "metadata": {
-        "id": "sbwULk6CInUS",
-        "outputId": "25c56013-25e8-4e62-9ecc-2c5a5c28277e",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -70,7 +78,9 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 89
-        }
+        },
+        "id": "sbwULk6CInUS",
+        "outputId": "25c56013-25e8-4e62-9ecc-2c5a5c28277e"
       },
       "execution_count": 2,
       "outputs": [
@@ -116,16 +126,16 @@
       "cell_type": "code",
       "source": [
         "api_token = {\"username\":\"rezafdz\",\"key\":\"fd16295d7b817e274541292110c8f784\"}\n",
-        "with open('kaggle.json', 'w') as file: #membuka file kaggle.json yang telah diupload\n",
+        "with open('kaggle.json', 'w') as file: \n",
         "    json.dump(api_token, file)\n",
         "!chmod 600 /root/.kaggle/kaggle.json"
       ],
       "metadata": {
-        "id": "3Scpdtu-IxO_",
-        "outputId": "b5d7ca65-c40f-45bd-cb89-a2e9f32f66b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3Scpdtu-IxO_",
+        "outputId": "b5d7ca65-c40f-45bd-cb89-a2e9f32f66b9"
       },
       "execution_count": 3,
       "outputs": [
@@ -141,9 +151,9 @@
     {
       "cell_type": "code",
       "source": [
-        "!mkdir -p ~/.kaggle #membuat directory bernama kaggle \n",
-        "!cp kaggle.json ~/.kaggle/ #copy file kaggle.json upload tadi ke directory baru\n",
-        "!chmod 600 ~/.kaggle/kaggle.json #berikan izin untuk file kaggle.json"
+        "!mkdir -p ~/.kaggle \n",
+        "!cp kaggle.json ~/.kaggle/ \n",
+        "!chmod 600 ~/.kaggle/kaggle.json "
       ],
       "metadata": {
         "id": "x5mW7xibIxhd"
@@ -157,11 +167,11 @@
         "!kaggle datasets download -d crowww/a-large-scale-fish-dataset"
       ],
       "metadata": {
-        "id": "v51frdd2Ixki",
-        "outputId": "d776408b-5780-4f5a-e2fc-82ba4b2e21b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "v51frdd2Ixki",
+        "outputId": "d776408b-5780-4f5a-e2fc-82ba4b2e21b8"
       },
       "execution_count": 5,
       "outputs": [
@@ -179,19 +189,19 @@
     {
       "cell_type": "code",
       "source": [
-        "from zipfile import ZipFile #library\n",
-        "file_name = \"a-large-scale-fish-dataset.zip\" #nama file yang telah di download\n",
+        "from zipfile import ZipFile \n",
+        "file_name = \"a-large-scale-fish-dataset.zip\" #\n",
         "\n",
-        "with ZipFile(file_name,'r') as zip : #file dibaca dengan alias zip\n",
-        "  zip.extractall() #ini kalo gk salah buat tempat hasil nya. karena gak ada, ya default ke content\n",
-        "  print('Berhasil') #ini print"
+        "with ZipFile(file_name,'r') as zip : \n",
+        "  zip.extractall() \n",
+        "  print('Berhasil') "
       ],
       "metadata": {
-        "id": "UeFaoB-gIxpB",
-        "outputId": "5fe0fbf3-5cce-42f1-8b88-bccba9a291c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UeFaoB-gIxpB",
+        "outputId": "5fe0fbf3-5cce-42f1-8b88-bccba9a291c8"
       },
       "execution_count": 6,
       "outputs": [
@@ -211,7 +221,7 @@
         "\n",
         "file_path = list(dataset_path.glob(r'**/*.png'))\n",
         "\n",
-        "# create labels from the folder name\n",
+        "\n",
         "labels = list(map(lambda x: os.path.split(os.path.split(x)[0])[1], file_path))"
       ],
       "metadata": {
@@ -233,12 +243,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "QGHLmlCDIxuX",
-        "outputId": "0f22ab5f-5453-42c1-c18e-0897b67cbacd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "QGHLmlCDIxuX",
+        "outputId": "0f22ab5f-5453-42c1-c18e-0897b67cbacd"
       },
       "execution_count": 8,
       "outputs": [
@@ -402,12 +412,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "ezrc6GxlIxxF",
-        "outputId": "a9081c5c-7679-457f-9fe9-5d1d8eb9de9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        }
+        },
+        "id": "ezrc6GxlIxxF",
+        "outputId": "a9081c5c-7679-457f-9fe9-5d1d8eb9de9b"
       },
       "execution_count": 9,
       "outputs": [
@@ -429,11 +439,11 @@
         "df.label.value_counts()"
       ],
       "metadata": {
-        "id": "KOolv0yvJRnh",
-        "outputId": "fedf4fd2-4e28-49ba-be2b-3bd037621351",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KOolv0yvJRnh",
+        "outputId": "fedf4fd2-4e28-49ba-be2b-3bd037621351"
       },
       "execution_count": 10,
       "outputs": [
@@ -474,11 +484,11 @@
         "df.label.value_counts()"
       ],
       "metadata": {
-        "id": "czsiNxF3JV41",
-        "outputId": "7d7d9de2-0919-410e-a417-dd911c29a2e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "czsiNxF3JV41",
+        "outputId": "7d7d9de2-0919-410e-a417-dd911c29a2e8"
       },
       "execution_count": 11,
       "outputs": [
@@ -540,11 +550,11 @@
         "print(\"Shape of validation data\", x_val.shape)"
       ],
       "metadata": {
-        "id": "HwXgb8rNJWUG",
-        "outputId": "7459ef3d-0709-46c2-e49a-00194364c146",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HwXgb8rNJWUG",
+        "outputId": "7459ef3d-0709-46c2-e49a-00194364c146"
       },
       "execution_count": 14,
       "outputs": [
@@ -576,11 +586,11 @@
         "val = image_data_generator.flow_from_dataframe(dataframe=x_val, x_col='image', y_col='label', target_size=(200,200), color_mode='rgb', class_mode='categorical',shuffle=False)"
       ],
       "metadata": {
-        "id": "9OH312I0Jrhk",
-        "outputId": "c3333fe2-7e62-4554-b182-4a44c412fdef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9OH312I0Jrhk",
+        "outputId": "c3333fe2-7e62-4554-b182-4a44c412fdef"
       },
       "execution_count": 15,
       "outputs": [
@@ -630,11 +640,11 @@
         "model.summary()"
       ],
       "metadata": {
-        "id": "cxg2JLxVJr_u",
-        "outputId": "f7a1f7e6-f7a6-451d-bf0f-5cc8eb975f9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cxg2JLxVJr_u",
+        "outputId": "f7a1f7e6-f7a6-451d-bf0f-5cc8eb975f9c"
       },
       "execution_count": 17,
       "outputs": [
@@ -697,11 +707,11 @@
         "history = model.fit(train, validation_data=val, epochs=100, callbacks=callback)"
       ],
       "metadata": {
-        "id": "nVA4wNg2JsEE",
-        "outputId": "3a6935bd-0b34-469d-bd09-f27ed376e8cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nVA4wNg2JsEE",
+        "outputId": "3a6935bd-0b34-469d-bd09-f27ed376e8cb"
       },
       "execution_count": 18,
       "outputs": [
@@ -840,12 +850,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "GIoSy9-iKA5U",
-        "outputId": "a0d7d6cd-70d0-47e8-a264-09065d363003",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 310
-        }
+        },
+        "id": "GIoSy9-iKA5U",
+        "outputId": "a0d7d6cd-70d0-47e8-a264-09065d363003"
       },
       "execution_count": 21,
       "outputs": [
@@ -893,11 +903,11 @@
         "labels"
       ],
       "metadata": {
-        "id": "ZKy32z6UKZ-y",
-        "outputId": "78944b51-1394-48ad-a1a7-688d5763158f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZKy32z6UKZ-y",
+        "outputId": "78944b51-1394-48ad-a1a7-688d5763158f"
       },
       "execution_count": 24,
       "outputs": [
@@ -928,11 +938,11 @@
         "labels"
       ],
       "metadata": {
-        "id": "7ADTYhQRKaCU",
-        "outputId": "a0791056-5ad4-489d-d24b-e2014f380647",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7ADTYhQRKaCU",
+        "outputId": "a0791056-5ad4-489d-d24b-e2014f380647"
       },
       "execution_count": 25,
       "outputs": [
@@ -963,11 +973,11 @@
         "print(classification_report(x_test.label, y_pred))"
       ],
       "metadata": {
-        "id": "FjsPLkXCKaFJ",
-        "outputId": "7fc6cf69-0be3-40ab-b83f-b8975dc46c1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FjsPLkXCKaFJ",
+        "outputId": "7fc6cf69-0be3-40ab-b83f-b8975dc46c1f"
       },
       "execution_count": 26,
       "outputs": [
@@ -1001,11 +1011,11 @@
         "print(confusion_matrix(x_test.label, y_pred))"
       ],
       "metadata": {
-        "id": "TFRH4IgqKwMv",
-        "outputId": "ca3932a3-5a6f-43cb-eab1-5d3d6cd37bfd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TFRH4IgqKwMv",
+        "outputId": "ca3932a3-5a6f-43cb-eab1-5d3d6cd37bfd"
       },
       "execution_count": 27,
       "outputs": [
@@ -1032,11 +1042,11 @@
         "test_accuracy = model.evaluate(test)[1]"
       ],
       "metadata": {
-        "id": "XLTJup71Kyqi",
-        "outputId": "9c161ee3-b808-43fc-8d0e-19b8ad4e60c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XLTJup71Kyqi",
+        "outputId": "9c161ee3-b808-43fc-8d0e-19b8ad4e60c9"
       },
       "execution_count": 28,
       "outputs": [
